[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/MainScreen/MainScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/theme_main_menu.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/icons/gamepads/xbox_a_button.svg" type="Texture" id=4]
[ext_resource path="res://assets/ui/icons/gamepads/playstation_cross_buttton.svg" type="Texture" id=5]
[ext_resource path="res://assets/ui/icons/gamepads/nintendob_button.svg" type="Texture" id=6]
[ext_resource path="res://src/UI/MainMenuTexts.gd" type="Script" id=7]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://src/UI/ScreenFader.tscn" type="PackedScene" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainScreen" parent="Background" instance=ExtResource( 1 )]

[node name="Context" type="Control" parent="."]
anchor_left = 0.6
anchor_top = 0.6
anchor_right = 0.95
anchor_bottom = 0.75
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texts" type="Control" parent="Context"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Context/Texts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 28.0
margin_bottom = 28.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Press" type="Label" parent="Context/Texts/HBoxContainer"]
margin_left = 111.0
margin_top = 58.0
margin_right = 180.0
margin_bottom = 89.0
text = "Press"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Context/Texts/HBoxContainer"]
margin_left = 184.0
margin_right = 282.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnyKey" type="Label" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 58.0
margin_right = 98.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.301961, 0.65098, 1, 1 )
text = "any key"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XboxA" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 33.0
margin_top = 57.0
margin_right = 65.0
margin_bottom = 89.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaystationX" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 33.0
margin_top = 57.0
margin_right = 65.0
margin_bottom = 89.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NintendoB" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 33.0
margin_top = 57.0
margin_right = 65.0
margin_bottom = 89.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToStart" type="Label" parent="Context/Texts/HBoxContainer"]
margin_left = 286.0
margin_top = 58.0
margin_right = 377.0
margin_bottom = 89.0
text = "to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Context/Texts"]
repeat = true
playback/repeat = true

[node name="Tween" type="Tween" parent="."]

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenFader" parent="FadeLayer" instance=ExtResource( 9 )]
duration_fade_out = 1.0
